header_search event

--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -31,6 +31,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- 구글 매테리얼 아이콘 -->
   <link rel="stylesheet" href="./css/main.css" />
+
+  <!-- defer속성을 이용해서 js구조가 모두 해석되면 main.js가 정상적으로 동작하도록 함  -->
+  <script defer src="./js/main.js"></script>
 </head>
 
 <body>
