--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -451,6 +451,11 @@
       </div>
     </div>
 
+    <div class="promotion">
+      <div class="swiper-container">
+        TEST!
+      </div>
+    </div>
   </section>
 
 </body>
