--- a/starbucks/index.html
+++ b/starbucks/index.html
@@ -46,7 +46,7 @@
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
   <!-- YOUUEBE 영상 올리기 -->
-  <!-- <script defer src="./js/youtube.js"></script> -->
+  <script defer src="./js/youtube.js"></script>
   <!-- defer속성을 이용해서 js구조가 모두 해석되면 main.js가 정상적으로 동작하도록 함  -->
   <script defer src="./js/main.js"></script>
 </head>
@@ -510,7 +510,85 @@
     <div class="inner">
       <img src="./images/floating1.png" alt="Icon" class="floating floating1" />
       <img src="./images/floating2.png" alt="Icon" class="floating floating2" />
+
+    </div>
+  </section>
+
+  <!-- SEASON PRODUCT -->
+  <section class="season-product">
+    <div class="inner">
       <img src="./images/floating3.png" alt="Icon" class="floating floating3" />
+      <img src="./images/season_product_image.png" alt="" class="product" />
+
+      <div class="text-group">
+        <img src="./images/season_product_text1.png" alt="" class="title" />
+        <img src="./images/season_product_text2.png" alt="" class="discription" />
+        <div class="more">
+          <a href="javascript:void(0)" class="btn">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESERVE COFFEE -->
+  <section class="reserve-coffee">
+    <div class="inner">
+      <img src="./images/reserve_logo.png" alt="" class="reserve-log" />
+      <div class="text-group">
+        <img src="./images/reserve_text.png" alt="" class="description" />
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
+        </div>
+      </div>
+      <img src="./images/reserve_image.png" alt="" class="product" />
+    </div>
+  </section>
+
+  <!-- PICK YOUR FAVORITE -->
+  <section class="pick-your-favorite">
+    <div class="inner">
+      <div class="text-group">
+        <img src="./images/favorite_text1.png" alt="" class="title" />
+        <img src="./images/favorite_text2.png" alt="" class="description" />
+        <div class="more">
+          <a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- RESERVE STORE -->
+  <section class="reserve-store">
+    <div class="inner">
+      <div class="medal">
+        <div class="front">
+          <img src="./images/reserve_store_medal_front.png" alt="">
+        </div>
+        <div class="back">
+          <img src="./images/reserve_store_medal_back.png" alt="">
+          <a href="javascript:void(0)" class="btn">
+            매장안내
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FIND THE STORE -->
+  <section class="find-store">
+    <div class="inner">
+      <img src="./images/find_store_texture1.png" alt="" class="texture1" />
+      <img src="./images/find_store_texture2.png" alt="" class="texture1" />
+      <img src="./images/find_store_picture1.jpg" alt="" class="picture picture1" />
+      <img src="./images/find_store_picture2.jpg" alt="" class="picture picture2" />
+
+      <div class="text-group">
+        <img src="./images/find_store_text1.png" alt="" class="title" />
+        <img src="./images/find_store_text2.png" alt="" class="description" />
+        <div class="more">
+          <a href="javascript:void(0)" class="btn">매장찾기</a>
+        </div>
+      </div>
     </div>
   </section>
 
